--- a/WebSite/Web.Debug.config
+++ b/WebSite/Web.Debug.config
@@ -1,11 +1,7 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
     <add name="database"
       connectionString="SQLSERVER_CONNECTION_STRING" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
-
-  <!--<system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-  </system.web>-->
 </configuration>
