--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -23,6 +23,7 @@
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
+    <customErrors mode="Off"></customErrors>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
