--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -35,6 +35,7 @@
       </namespaces>
     </pages>
   </system.web>
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -46,16 +47,21 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+
+    <contexts>
+      <context type="NowOnline.AppHarbor.Repositories.DataContext, NowOnline.AppHarbor.Repositories">
+        <databaseInitializer type="NowOnline.AppHarbor.Repositories.DataContextInitializer, NowOnline.AppHarbor.Repositories"></databaseInitializer>
+      </context>
+    </contexts>
   </entityFramework>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
