--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -52,11 +52,18 @@
     <Compile Include="DataContext\DataContextInitializer.cs" />
     <Compile Include="DataContext\IDataContext.cs" />
     <Compile Include="Entities\Application.cs" />
-    <Compile Include="Entities\Tag.cs" />
     <Compile Include="Entities\Team.cs" />
     <Compile Include="Migrations\201311241329051_InitialCreate.cs" />
     <Compile Include="Migrations\201311241329051_InitialCreate.Designer.cs">
       <DependentUpon>201311241329051_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201311241502380_RemovedTagEntity.cs" />
+    <Compile Include="Migrations\201311241502380_RemovedTagEntity.Designer.cs">
+      <DependentUpon>201311241502380_RemovedTagEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201311241511469_AddedCommentToApplication.cs" />
+    <Compile Include="Migrations\201311241511469_AddedCommentToApplication.Designer.cs">
+      <DependentUpon>201311241511469_AddedCommentToApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,8 +71,6 @@
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\Interfaces\IApplicationRepository.cs" />
     <Compile Include="Repositories\Interfaces\IGenericRepository.cs" />
-    <Compile Include="Repositories\Interfaces\ITagRepository.cs" />
-    <Compile Include="Repositories\TagRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -76,6 +81,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201311241329051_InitialCreate.resx">
       <DependentUpon>201311241329051_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201311241502380_RemovedTagEntity.resx">
+      <DependentUpon>201311241502380_RemovedTagEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201311241511469_AddedCommentToApplication.resx">
+      <DependentUpon>201311241511469_AddedCommentToApplication.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
