--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\201311241511469_AddedCommentToApplication.Designer.cs">
       <DependentUpon>201311241511469_AddedCommentToApplication.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201311241522338_RemovedCommentFromApplication.cs" />
+    <Compile Include="Migrations\201311241522338_RemovedCommentFromApplication.Designer.cs">
+      <DependentUpon>201311241522338_RemovedCommentFromApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationRepository.cs" />
@@ -87,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201311241511469_AddedCommentToApplication.resx">
       <DependentUpon>201311241511469_AddedCommentToApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201311241522338_RemovedCommentFromApplication.resx">
+      <DependentUpon>201311241522338_RemovedCommentFromApplication.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
