Fixed migrations to work again

--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -50,9 +50,10 @@
       </parameters>
     </defaultConnectionFactory>
 
+    <!-- Migrate database to latest version (if you remove this, database migrations will not be applied) -->
     <contexts>
       <context type="NowOnline.AppHarbor.Repositories.DataContext, NowOnline.AppHarbor.Repositories">
-        <databaseInitializer type="NowOnline.AppHarbor.Repositories.DataContextInitializer, NowOnline.AppHarbor.Repositories"></databaseInitializer>
+        <databaseInitializer type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[NowOnline.AppHarbor.Repositories.DataContext, NowOnline.AppHarbor.Repositories], [NowOnline.AppHarbor.Repositories.Configuration, NowOnline.AppHarbor.Repositories]], EntityFramework" />
       </context>
     </contexts>
   </entityFramework>
