--- a/WebSite/Web.Release.config
+++ b/WebSite/Web.Release.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  
   <connectionStrings>
-    <add name="database"
-      connectionString="SQLSERVER_CONNECTION_STRING" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="database" connectionString="SQLSERVER_CONNECTION_STRING" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
-  <!--<system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-  </system.web>-->
+  <!-- Uncommnet below to remove automatic migration for EF so that the database is not updated or seeded automatically -->
+  <!--<entityFramework>
+    <contexts xdt:Transform="Remove">
+    </contexts>
+  </entityFramework>-->
 </configuration>
