Added debug config

--- a/WebSite/Web.Release.config
+++ b/WebSite/Web.Release.config
@@ -4,7 +4,12 @@
   <connectionStrings>
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="database" connectionString="SQLSERVER_CONNECTION_STRING" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
+  
+  <system.web>
+    <compilation debug="false" xdt:Transform="SetAttributes"/>
+    <customErrors xdt:Transform="Replace" mode="Off" />
+  </system.web>
+  
   <!-- Uncommnet below to remove automatic migration for EF so that the database is not updated or seeded automatically -->
   <!--<entityFramework>
     <contexts xdt:Transform="Remove">
