--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -19,7 +19,7 @@
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
-    <customErrors mode="Off"></customErrors>
+    <customErrors mode="On"></customErrors>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
