Textual change and some tweaks for readability

--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="database" connectionString="Server=(localdb)\v11.0;Integrated Security=true;Database=SampleDatabase;" providerName="System.Data.SqlClient" />
+    <add name="database" connectionString="Server=(localdb)\v11.0;Integrated Security=true;Database=Entity Framework with MVC;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
